Added link of the contact us page to the main home page

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <!-- CONTACT INFO -->
     <section class="cta" id="contact">
         <h1 class="heading1">Enroll to Our College</h1>
-        <a href="#" class="menu-btn">CONTACT US</a>
+        <a href="/Contact-Us/Contact.html" class="menu-btn">CONTACT US</a>
     </section>
 
     <footer>
