provided a link to the images in a proper way

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KLE's JT College</title>
-    <link rel="icon" href="/logo-bg-images/logo.png">
+    <link rel="icon" href="./logo-bg-images/logo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
 <body>
     <div class="fullnav">
         <nav>
-            <img src="/logo-bg-images/logo.png" alt="college logo">
+            <img src="./logo-bg-images/logo.png" alt="college logo">
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -85,24 +85,24 @@
         <h1 class="heading">Our Campus</h1>
         <div class="row">
             <div class="campus-col">
-                <img src="/campus-images/Campus 1.jpg" alt="campus image">
+                <img src="./campus-images/Campus 1.jpg" alt="campus image">
             </div>
             <div class="campus-col">
-                <img src="/infrastructure-images/build 1.jpg" alt="building image">
+                <img src="./infrastructure-images/build 1.jpg" alt="building image">
             </div>
             <div class="campus-col">
-                <img src="/campus-images/Campus 2.jpg" alt="campus image">
+                <img src="./campus-images/Campus 2.jpg" alt="campus image">
             </div>
         </div>
         <div class="row">
             <div class="campus-col">
-                <img src="/infrastructure-images/GH 1.jpg" alt="GH Hall">
+                <img src="./infrastructure-images/GH 1.jpg" alt="GH Hall">
             </div>
             <div class="campus-col">
-                <img src="/infrastructure-images/Lib 1.jpg" alt="Library image">
+                <img src="./infrastructure-images/Lib 1.jpg" alt="Library image">
             </div>
             <div class="campus-col">
-                <img src="infrastructure-images/build 2.jpg" alt="building image">
+                <img src="./infrastructure-images/build 2.jpg " alt="building image">
             </div>
         </div>
     </section>
@@ -113,43 +113,43 @@
         <h1 class="heading">Our Facilities</h1>
         <div class="row">
             <div class="facilities-col">
-                <img src="/campus-images/Canteen 1.jpg" alt="canteen image">
+                <img src="./campus-images/Canteen 1.jpg" alt="canteen image">
                 <h3>Canteen</h3>
             </div>
             <div class="facilities-col">
-                <img src="/campus-images/SWP 1.jpg" alt="Swimming Pool image">
+                <img src="./campus-images/SWP 1.jpg" alt="Swimming Pool image">
                 <h3>Swimming Pool</h3>
             </div>
             <div class="facilities-col">
-                <img src="/campus-images/YC 1.jpg" alt="yoga center image">
+                <img src="./campus-images/YC 1.jpg" alt="yoga center image">
                 <h3>Yoga Center</h3>
             </div>
         </div>
         <div class="row">
             <div class="facilities-col">
-                <img src="/campus-images/Ground 1.jpg" alt="play ground image">
+                <img src="./campus-images/Ground 1.jpg" alt="play ground image">
                 <h3>Play Ground</h3>
             </div>
             <div class="facilities-col">
-                <img src="/campus-images/BH 1.jpg" alt="boys hostel image">
+                <img src="./campus-images/BH 1.jpg" alt="boys hostel image">
                 <h3>Boys Hostel</h3>
             </div>
             <div class="facilities-col">
-                <img src="/campus-images/IS 1.jpg" alt="indoor stadium image">
+                <img src="./campus-images/IS 1.jpg" alt="indoor stadium image">
                 <h3>Indoor Stadium</h3>
             </div>
         </div>
         <div class="row">
             <div class="facilities-col">
-                <img src="/campus-images/Lib 2.jpg" alt="Library image">
+                <img src="./campus-images/Lib 2.jpg" alt="Library image">
                 <h3>Library</h3>
             </div>
             <div class="facilities-col">
-                <img src="/campus-images/Comp 1.jpg" alt="computer lab image">
+                <img src="./campus-images/Comp 1.jpg" alt="computer lab image">
                 <h3>Computer Lab</h3>
             </div>
             <div class="facilities-col">
-                <img src="/campus-images/Ict 1.jpg" alt="indoor stadium image">
+                <img src="./campus-images/Ict 1.jpg" alt="indoor stadium image">
                 <h3>ICT Class Room</h3>
             </div>
         </div>
@@ -162,7 +162,7 @@
             <div class="flip-card-container">
                 <div class="flip-card">
                     <div class="flip-card-front">
-                        <img src="/testomonial-images/img1.jpg" alt="student image">
+                        <img src="./testomonial-images/img1.jpg" alt="student image">
                     </div>
                     <div class="flip-card-back">
                         <div class="flip-name">
@@ -179,7 +179,7 @@
             <div class="flip-card-container">
                 <div class="flip-card">
                     <div class="flip-card-front">
-                        <img src="/testomonial-images/img2.jpg" alt="student image">
+                        <img src="./testomonial-images/img2.jpg" alt="student image">
                     </div>
                     <div class="flip-card-back">
                         <div class="flip-name">
@@ -193,7 +193,7 @@
             <div class="flip-card-container">
                 <div class="flip-card">
                     <div class="flip-card-front">
-                        <img src="/testomonial-images/img3.jpg" alt="student image">
+                        <img src="./testomonial-images/img3.jpg" alt="student image">
                     </div>
                     <div class="flip-card-back">
                         <div class="flip-name">
@@ -211,7 +211,7 @@
     <!-- CONTACT INFO -->
     <section class="cta" id="contact">
         <h1 class="heading1">Enroll to Our College</h1>
-        <a href="/Contact-Us/Contact.html" class="menu-btn">CONTACT US</a>
+        <a href="./Contact-Us/Contact.html" class="menu-btn">CONTACT US</a>
     </section>
 
     <footer>
