provided a link to the images in a proper way

--- a/Contact-Us/Contact.html
+++ b/Contact-Us/Contact.html
@@ -16,18 +16,18 @@
         <div class="contact-details">
             <h2 style="text-align: left;">Profile Links</h2>
             <a href="https://www.facebook.com/gadag.bca" target="_blank" class="icon-link">
-                <img src="/Contact-Us/Facebook.png" alt="Facebook">
+                <img src="Facebook.png" alt="Facebook">
             </a>
 
 
             <a href="https://www.linkedin.com/in/kle-s-bachelor-of-computer-applications-j-t-college-gadag-2aa814215/"
                 target="_blank" class="icon-link">
-                <img src="/Contact-Us/LinkedIn.png" alt="LinkedIn">
+                <img src="LinkedIn.png" alt="LinkedIn">
             </a>
 
 
             <a href="https://www.instagram.com/jtbca_gadag/" target="_blank" class="icon-link">
-                <img src="/Contact-Us/Instagram.png" alt="Instagram">
+                <img src="Instagram.png" alt="Instagram">
             </a>
 
             <p>You may contact us by clicking above icons or by filling the
