Added testmonial images

--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
             <div class="flip-card-container">
                 <div class="flip-card">
                     <div class="flip-card-front">
-                        <img src="./testomonial-images/img1.jpg" alt="student image">
+                        <img src="./testomonial-images/img2.jpg" alt="student image">
                     </div>
                     <div class="flip-card-back">
                         <div class="flip-name">
                             <span class="filp_title">Prajwal</span>
                             <div class="para">
-                                <p>"Attending [JTBCA College] has been a transformative experience for me. The faculty
+                                <p>Attending [JTBCA College] has been a transformative experience for me. The faculty
                                     and
                                     staff are incredibly knowledgeable </p>
                             </div>
@@ -179,7 +179,7 @@
             <div class="flip-card-container">
                 <div class="flip-card">
                     <div class="flip-card-front">
-                        <img src="./testomonial-images/img2.jpg" alt="student image">
+                        <img src="./testomonial-images/img1.jpg" alt="student image">
                     </div>
                     <div class="flip-card-back">
                         <div class="flip-name">
