--- a/Contact-Us/Contact.html
+++ b/Contact-Us/Contact.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../logo-bg-images/logo.png">
     <title>Contact Us | KLE's JT College</title>
     <link rel="stylesheet" href="Contact.css">
 
