--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="#facilities" class="menus">FACILITIES</a></li>
                     <li><a href="#testimonial" class="menus">TESTIMONIAL</a></li>
                     <li><a href="#contact" class="menus">CONTACT</a></li>
-                    <li><a href="#">LOG IN</a></li>
+                    <li><a href="./Login-page/Login.html">LOG IN</a></li>
 
                 </ul>
             </div>
