--- a/Forget-Password/forgetpassword.html
+++ b/Forget-Password/forgetpassword.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="forgetpassword.css">
-    <title>Forgot and Reset Password</title>
+    <title>Reset Password</title>
+    <link rel="icon" href="../logo-bg-images/logo.png">
 </head>
 
 <body>
