--- a/Login-page/Login.html
+++ b/Login-page/Login.html
@@ -46,7 +46,7 @@
                     <label>
                         <input type="checkbox" autocomplete="off">Remember Me
                     </label>
-                    <a href="#">Forget Password?</a>
+                    <a href="../Forget-Password/forgetpassword.html">Forget Password?</a>
                 </div>
             </form>
             <div class="buttons">
