--- a/Student-Registeration/student_R.html
+++ b/Student-Registeration/student_R.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="../Student-Registeration/student_R.css" />
+    <link rel="icon" href="../logo-bg-images/logo.png">
 </head>
 
 <body>
