Added logo in the title

--- a/Faculty-Registeration/faculty_R.html
+++ b/Faculty-Registeration/faculty_R.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Faculty Login</title>
+    <title>Faculty Registeration</title>
     <link rel="stylesheet" href="./faculty_R.css">
+    <link rel="icon" href="../logo-bg-images/logo.png">
 </head>
 
 <body>
     <div class="container">
         <div class="login_form">
             <form action="#" class="form">
-                <h1 class="form_title"> Faculty Register Form </h1>
+                <h1 class="form_title"> Faculty Registration</h1>
                 <div class="two-line">
                     <div class="form_div">
                         <input type="text" class="form_input" placeholder=" " autocomplete="off">
@@ -40,7 +41,7 @@
                         </label>
                     </div>
                 </div>
-                <div class="form_div">                   
+                <div class="form_div">
                     <div class="form_div">
                         <input type="text" class="form_input" placeholder=" " autocomplete="off">
                         <label class="form_label">Address</label>
