--- a/Student-Registeration/student_R.html
+++ b/Student-Registeration/student_R.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Student Registration</title>
     <link rel="stylesheet" href="../Student-Registeration/student_R.css" />
     <link rel="icon" href="../logo-bg-images/logo.png">
 </head>
@@ -70,7 +71,9 @@
                 <input type="text" placeholder="Enter street address" autocomplete='off' required />
                 <input type="text" placeholder="Enter street address line 2" autocomplete='off' required />
                 <div class="column">
-                    <div class="select-box">
+                    <input type="text" placeholder="Enter your city" autocomplete='off' required />
+                    <input type="number" placeholder="Enter postal code" autocomplete='off' required />
+                    <!-- <div class="select-box">
                         <select>
                             <option>Country</option>
                             <option>America</option>
@@ -78,12 +81,11 @@
                             <option>India</option>
                             <option>Nepal</option>
                         </select>
-                    </div>
-                    <input type="text" placeholder="Enter your city" autocomplete='off' required />
+                    </div> -->
                 </div>
                 <div class="column">
-                    <input type="text" placeholder="Enter your region" autocomplete='off' required />
-                    <input type="number" placeholder="Enter postal code" autocomplete='off' required />
+                    <input type="text" placeholder="Enter your State" autocomplete='off' required />
+                    <input type="text" placeholder="Country" autocomplete='off' required />
                 </div>
             </div>
             <button>Submit</button>
