--- a/About-Us/about.html
+++ b/About-Us/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./about.css">
 </head>
 
 <body>
@@ -203,7 +203,8 @@
 </body>
 <footer>
     <p>
-        2023 &copy; KLE Society’s JT College of Arts , Commerce and Science Gadag | All rights reserved 
+        2023 &copy; KLE Society’s JT College of Arts , Commerce and Science Gadag | All rights reserved
     </p>
 </footer>
+
 </html>
