Added logo to the about page

--- a/About-Us/about.html
+++ b/About-Us/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
     <link rel="stylesheet" href="./about.css">
+    <link rel="icon" href="../logo-bg-images/logo.png">
 </head>
 
 <body>
